--- a/investigate_imbalance.Rmd
+++ b/investigate_imbalance.Rmd
@@ -81,8 +81,13 @@ sim.fun <- function(
         naive_X <- c(x.tru.affected, x.tru.control)
         naive_X_z <- (naive_X - mean(naive_X)) / sd(naive_X)
 
+        # naive.dat <- data.frame(
+        #     X = as.numeric(pnorm(naive_X_z) > runif(200, min = -.1, max = .1)),
+        #     y = naive.labels
+        # )
+
         naive.dat <- data.frame(
-            X = as.numeric(pnorm(naive_X_z) > runif(200)),
+            X = as.numeric(naive_X_z > 0),
             y = naive.labels
         )
 
@@ -95,11 +100,18 @@ sim.fun <- function(
         out2 <- c(out2, exp(naive.coeff))
         out3 <- c(out3, unlab.pos)
 
-        temp.out1 <- rcompanion::cohenW(naive.dat$y, naive.dat$X) # cohen_w
+        # temp.out1 <- rcompanion::cohenW(naive.dat$y, naive.dat$X) # cohen_w
 
 
-        temp.out4 <- pwr.chisq.test(w = temp.out1, df = 1, N = 200, sig.level = 0.05)$power
-        out4 <- c(out4, temp.out4)
+        # temp.out4 <- pwr.chisq.test(w = temp.out1, df = 1, N = 200, sig.level = 0.05)$power
+        # out4 <- c(out4, temp.out4)
+
+temp.out1<-cohens_d(naive_X_z ~ naive.dat$y)[[1]]
+
+
+temp.out4<-pwr.2p2n.test(temp.out1,n.cases,n.naiv.control,0.05)[[5]]
+out4 <- c(out4, temp.out4)
+
     } # loop
 
     return(list(
@@ -114,10 +126,6 @@ sim.fun <- function(
     ))
 }
 ```
-
-
-
-
 
 ```{r,results='asis'}
 sim.table <- function(parmlist) {
@@ -157,152 +165,13 @@ oddsratio_to_d(1.2, log = FALSE)
 
 
 
-This is a stand alone piece that saves the output table so I can view the results different ways.
+Run three at a time-makes all the data for the plot
 ```{r}
 now <- Sys.time()
 
 
 parmlist <- list(
-    c(rep(10000, 11)), # interations; num.iter
-    rep(c(150), 11), # n.cases
-    rep(c(50), 11), # number unlabeled
-    c(rep(.5, 11)), # eff.sz for normals
-    c(sort(rep(seq(0, .1, by = 0.01), 1))) # non-detection proportion
-)
-
-
-big.otpt <- bind_rows(pmap(parmlist, sim.fun),
-    .id = "column_label"
-) # unlists and binds rows
-
-
-
-smry.otpt <- big.otpt %>%
-    group_by(n.cases, n.naiv.control, prp.nondet, eff.sz) %>%
-    dplyr::summarise(
-        prp.nondet = mean(prp.nondet),
-        eff.sz = mean(eff.sz),
-        naive.or.mn = mean(naive.or),
-        naive.p.mn = mean(naive.p),
-        naive.p.sd = sd(naive.p),
-        unlabeled.pos = mean(unlabeled.pos),
-        naive.power = mean(naive.pwr)
-    )
-
-
-smry.otpt %>%
-    ungroup() |>
-    arrange(prp.nondet)
-
-smry.otpt %>%
-    ungroup() %>%
-    select(-c(naive.or.mn, naive.p.mn, naive.p.sd, eff.sz)) %>%
-    arrange(naive.power)
-
-pandoc.table(smry.otpt %>% ungroup(),
-    style = "rmarkdown", digits = 3, split.table = Inf
-)
-
-print(difftime(Sys.time(), now, units = "mins"))
-
-
-smry.otpt %>%
-    ungroup() %>%
-    select(n.cases, n.naiv.control, prp.nondet, naive.power) %>%
-    reframe(prp.nondet = prp.nondet, zzz = naive.power / mean(naive.power[prp.nondet == 0]))
-
-
-pandoc.table(smry.otpt %>% ungroup() %>% arrange(prp.nondet),
-    style = "rmarkdown", digits = 3, split.table = Inf
-)
-```
-
-
-```{r}
-# df.plot <- smry.otpt %>%
-#     ungroup() %>%
-#     select(n.cases, n.naiv.control, prp.nondet, naive.power) %>%
-#     reframe(prp.nondet = prp.nondet, zzz = naive.power /
-# mean(naive.power[prp.nondet == 0])) %>%
-#     mutate(prp.nondet = prp.nondet * 100, zzz = zzz * 100)
-
-# this plots negative power losss
-df.plot <- smry.otpt %>%
-    ungroup() %>%
-    select(n.cases, n.naiv.control, prp.nondet, naive.power) %>%
-    reframe(prp.nondet = prp.nondet, zzz = naive.power /
-        mean(naive.power[prp.nondet == 0])) %>%
-    mutate(prp.nondet = prp.nondet * 100, zzz = (zzz * 100) - 100)
-
-
-# tiff("powerloss3.tiff", units = "in", width = 6, height = 4, res = 600)
-
-ggplot(data = df.plot, aes(x = prp.nondet, zzz)) +
-    geom_line(color = "red") +
-    geom_point() +
-    xlab("Percent of undetected positives in the control group") +
-    ylab("Relative power loss (%)") +
-    ggtitle("Power loss from positive cases in the negative control group")
-# dev.off()
-```
-
-
-Sandbox in this chunk
-```{r,include=FALSE}
-n.cases <- 100
-n.naiv.control <- 100
-eff.sz <- .5
-prp.nondet <- .05
-
-
-### numbers of things
-n.dogs <- n.cases + n.naiv.control # total number of dogs
-
-
-# control group is made up of the unlabeled pos and the real unaffected
-# number of positive dogs who are unlabled
-unlab.pos <- round(n.naiv.control * prp.nondet)
-n.tru.unaff <- n.naiv.control - unlab.pos # the number of unaffected
-
-n.tru.aff <- n.cases + unlab.pos # the number of positive dogs in both groups
-
-tru.labels <- c(rep(1, n.tru.aff), rep(0, (n.dogs - n.tru.aff)))
-naive.labels <- c(rep(1, n.cases), rep(0, n.naiv.control))
-
-
-
-
-### sample X
-# this is where the stocastic part comes in
-
-x.tru.affected <- rnorm(n.cases, mean = eff.sz)
-
-# this is a poor choice for variable name
-x.tru.control <- c(
-    rnorm(unlab.pos, mean = eff.sz),
-    rnorm(n.tru.unaff)
-)
-
-naive.dat <- data.frame(
-    X = as.numeric(c(x.tru.affected, x.tru.control) > runif(200)),
-    y = naive.labels
-)
-
-table(naive.dat$y, naive.dat$X)
-
-
-cohen_w <- rcompanion::cohenW(naive.dat$y, naive.dat$X)
-pwr.chisq.test(w = cohen_w, df = 1, N = 200, sig.level = 0.05)$power
-```
-
-
-Run three at a time
-```{r}
-now <- Sys.time()
-
-
-parmlist <- list(
-    rep(10000, 15), # interations; num.iter
+    rep(10001, 15), # interations; num.iter
     rep(100, 15), # n.cases
     rep(100, 15), # number unlabeled
     rep(.5, 15), # eff.sz for normals
@@ -334,7 +203,7 @@ pandoc.table(smry.otpt_100_100 %>% ungroup() %>% arrange(prp.nondet),
 
 
 parmlist <- list(
-    rep(10000, 15), # interations; num.iter
+    rep(10001, 15), # interations; num.iter
     rep(150, 15), # n.cases
     rep(50, 15), # number unlabeled
     rep(.5, 15), # eff.sz for normals
@@ -367,7 +236,7 @@ pandoc.table(smry.otpt_150_50 %>% ungroup() %>% arrange(prp.nondet),
 
 
 parmlist <- list(
-    rep(10000, 15), # interations; num.iter
+    rep(10001, 15), # interations; num.iter
     rep(50, 15), # n.cases
     rep(150, 15), # number unlabeled
     rep(.5, 15), # eff.sz for normals
@@ -403,80 +272,8 @@ pandoc.table(smry.otpt_50_150 %>% ungroup() %>% arrange(prp.nondet),
 difftime(Sys.time(), now)
 ```
 
-plot all three curves
-```{r}
-# df.plot <- smry.otpt %>%
-#     ungroup() %>%
-#     select(n.cases, n.naiv.control, prp.nondet, naive.power) %>%
-#     reframe(prp.nondet = prp.nondet, zzz = naive.power /
-# mean(naive.power[prp.nondet == 0])) %>%
-#     mutate(prp.nondet = prp.nondet * 100, zzz = zzz * 100)
 
-# this plots negative power losss
-df.plot1 <- smry.otpt_100_100 %>%
-    ungroup() %>%
-    select(prp.nondet, naive.power) %>%
-    mutate(aaa = "1", zzz = naive.power)
-
-df.plot2 <- smry.otpt_150_50 %>%
-    ungroup() %>%
-    select(prp.nondet, naive.power) %>%
-    mutate(aaa = "2", zzz = naive.power)
-
-
-df.plot3 <- smry.otpt_50_150 %>%
-    ungroup() %>%
-    select(prp.nondet, naive.power) %>%
-    mutate(aaa = "3", zzz = naive.power)
-
-df.plot <- bind_rows(df.plot1, df.plot2, df.plot3)
-
-# tiff("powerloss_all_three.tiff", units = "in", width = 6, height = 4, res = 600
-
-ggplot(data = df.plot, aes(x = prp.nondet, zzz, color = aaa)) +
-    geom_line()
-# dev.off()
-```
-
-plot all three curves this just changes the scale from the
-above plot
-```{r}
-# df.plot <- smry.otpt %>%
-#     ungroup() %>%
-#     select(n.cases, n.naiv.control, prp.nondet, naive.power) %>%
-#     reframe(prp.nondet = prp.nondet, zzz = naive.power /
-# mean(naive.power[prp.nondet == 0])) %>%
-#     mutate(prp.nondet = prp.nondet * 100, zzz = zzz * 100)
-
-# this plots negative power losss
-df.plot1 <- smry.otpt_100_100 %>%
-    ungroup() %>%
-    select(prp.nondet, naive.power) %>%
-    reframe(prp.nondet = prp.nondet, zzz = naive.power) %>%
-    mutate(aaa = "1", prp.nondet = prp.nondet * 100, zzz = zzz * 100)
-
-df.plot2 <- smry.otpt_150_50 %>%
-    ungroup() %>%
-    select(prp.nondet, naive.power) %>%
-    reframe(prp.nondet = prp.nondet, zzz = naive.power) %>%
-    mutate(aaa = "2", prp.nondet = prp.nondet * 100, zzz = zzz * 100)
-
-
-df.plot3 <- smry.otpt_50_150 %>%
-    ungroup() %>%
-    select(prp.nondet, naive.power) %>%
-    reframe(prp.nondet = prp.nondet, zzz = naive.power) |>
-    mutate(aaa = "3", prp.nondet = prp.nondet * 100, zzz = zzz * 100)
-
-df.plot <- bind_rows(df.plot1, df.plot2, df.plot3)
-
-# tiff("powerloss_all_three.tiff", units = "in", width = 6, height = 4, res = 600
-
-ggplot(data = df.plot, aes(x = prp.nondet, zzz, color = aaa)) +
-    geom_line()
-# dev.off()
-```
-
+usually use this one
 The plot below is power loss normlize to the best power, which is 
 balance groups (100,100) and 0 prp.nondet.
 ```{r, echo=FALSE}
@@ -528,4 +325,68 @@ ggplot(data = df.plot, aes(x = prp.nondet, zzz, color = aaa)) +
 
 
 dev.off()
+```
+
+# Sandbox
+
+```{r,include=FALSE}
+
+
+    n.cases <- 150
+    n.naiv.control <- 50
+    eff.sz <- 0.5
+    prp.nondet <- 0
+
+    ### numbers of things
+    n.dogs <- n.cases + n.naiv.control # total number of dogs
+
+
+    # control group is made up of the unlabeled pos and the real unaffected
+    # number of positive dogs who are unlabled
+    unlab.pos <- round(n.naiv.control * prp.nondet)
+    n.tru.unaff <- n.naiv.control - unlab.pos # the number of unaffected
+
+    n.tru.aff <- n.cases + unlab.pos # the number of positive dogs in both groups
+
+    tru.labels <- c(rep(1, n.tru.aff), rep(0, (n.dogs - n.tru.aff)))
+    naive.labels <- c(rep(1, n.cases), rep(0, n.naiv.control))
+
+table(tru.labels)
+table(naive.labels)
+
+
+        ### sample X
+        # this is where the stocastic part comes in
+
+        x.tru.affected <- rnorm(n.cases, mean = eff.sz)
+
+        x.tru.control <- c(
+            rnorm(unlab.pos, mean = eff.sz),
+            rnorm(n.tru.unaff)
+        )
+
+hist(x.tru.affected)
+hist(x.tru.control)
+
+        naive_X <- c(x.tru.affected, x.tru.control)
+        naive_X_z <- (naive_X - mean(naive_X)) / sd(naive_X)
+
+        # naive.dat <- data.frame(
+        #     X = as.numeric(pnorm(naive_X_z) > runif(200, min = -.01, max = .01)),
+        #     y = naive.labels
+        # )
+
+                naive.dat <- data.frame(
+            X = as.numeric(naive_X_z > runif(200, min = -.01, max = .01)),
+            y = naive.labels
+        )
+hist(naive_X_z)
+
+temp.out1<-cohens_d(naive_X_z ~ naive.dat$y)[[1]]
+#temp.out1<-rcompanion::cohenW(naive.dat$y, naive.dat$X) # cohen_w
+
+temp.out1
+#pwr.chisq.test(w = temp.out1, df = 1, N = 200, sig.level = 0.05)$power
+
+pwr.2p2n.test(temp.out1,n.cases,n.naiv.control,0.05)[[5]]
 ```
