--- a/documents/positive_unlabeled_design_paper.tex
+++ b/documents/positive_unlabeled_design_paper.tex
@@ -86,9 +86,9 @@
 \begin{document}
 
 \hypertarget{postitive-unlabeled-data-considerations-in-the-design-of-orthopaedic-risk-factor-studies}{%
-\section{Postitive-Unlabeled data considerations in the design of
-orthopaedic risk-factor
-studies}\label{postitive-unlabeled-data-considerations-in-the-design-of-orthopaedic-risk-factor-studies}}
+\section{Postitive-Unlabeled Data Considerations in the Design of
+Orthopaedic Risk-factor
+Studies}\label{postitive-unlabeled-data-considerations-in-the-design-of-orthopaedic-risk-factor-studies}}
 
 \hypertarget{abstract}{%
 \subsection{Abstract}\label{abstract}}
@@ -135,6 +135,8 @@ Researchers calculating sample sizes for risk-factor studies should
 include adjustments for misclassification rates.
 
 Keywords: risk-factor, case-control, power, sample size
+
+\newpage
 
 \hypertarget{introduction}{%
 \subsection{Introduction}\label{introduction}}
@@ -225,6 +227,8 @@ varying the imbalance between the numbers of cases and naive controls.
 Our aim is to demonstrate that the naive analysis of PU data affects
 statistical power in risk-factor studies, even for small nondetection
 rates.
+
+\pagebreak
 
 \hypertarget{methods-and-materials}{%
 \subsection{Methods and materials}\label{methods-and-materials}}
